--- a/src/css/pokedex.css
+++ b/src/css/pokedex.css
@@ -7,7 +7,7 @@
     width: 300px; /* Largura da Pokédex */
     max-width: 90%;
     margin: auto;
-    padding: 20px;
+    padding: 40px;
     text-align: center;
     color: #ffffff; 
     margin-bottom: 20px;
@@ -58,4 +58,19 @@
     text-align: center; /* Alinha o conteúdo ao centro */
     margin-top: 20px; /* Espaço superior */
     display: none; /* Oculta inicialmente */
+}
+
+.btn-shiny{
+    background-color: #ffcc00;
+    color: black;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+#detalhesPokemon.modo-escuro-border {
+    border: #ffffff; /* Cor da borda no modo escuro */
 }
